@@ -2,10 +2,13 @@ package com.kaylerrenslow.a3plugin.lang.sqf.psi.impl;
 
 import com.intellij.extapi.psi.ASTWrapperPsiElement;
 import com.intellij.lang.ASTNode;
-import com.intellij.openapi.util.text.StringUtil;
 import com.intellij.psi.PsiElement;
+import com.intellij.psi.PsiReference;
+import com.intellij.psi.impl.source.resolve.reference.ReferenceProvidersRegistry;
+import com.intellij.util.ArrayUtil;
 import com.intellij.util.IncorrectOperationException;
 import com.kaylerrenslow.a3plugin.lang.sqf.psi.SQFNamedElement;
+import com.kaylerrenslow.a3plugin.lang.sqf.psi.SQFReference;
 import com.kaylerrenslow.a3plugin.lang.sqf.psi.SQFVariable;
 import com.kaylerrenslow.a3plugin.lang.sqf.psi.helpers.SQFUtil;
 import org.jetbrains.annotations.NonNls;
@@ -15,15 +18,27 @@ import org.jetbrains.annotations.Nullable;
 /**
  * Created by Kayler on 03/19/2016.
  */
-public abstract class SQFNamedElementImpl extends ASTWrapperPsiElement implements SQFNamedElement{
+public class SQFNamedElementImpl extends ASTWrapperPsiElement implements SQFNamedElement{
 	public SQFNamedElementImpl(@NotNull ASTNode node) {
 		super(node);
 	}
 
+	@NotNull
+	@Override
+	public PsiReference[] getReferences() {
+		PsiReference[] references = ReferenceProvidersRegistry.getReferencesFromProviders(this);
+		return ArrayUtil.prepend(getReference(), references);
+	}
+
+
+	@Override
+	public PsiReference getReference() {
+		return new SQFReference(this);
+	}
+
 	@Override
 	public String toString() {
-		final String className = getClass().getSimpleName();
-		return StringUtil.trimEnd(className, "Impl");
+		return this.getName();
 	}
 
 	@Nullable
@@ -37,13 +52,12 @@ public abstract class SQFNamedElementImpl extends ASTWrapperPsiElement implement
 		return getNode().getText();
 	}
 
-
 	@Override
 	public PsiElement setName(@NonNls @NotNull String name) throws IncorrectOperationException {
 		ASTNode me = this.getNode();
 		SQFVariable var = SQFUtil.createVariable(this.getProject(), name);
-//		me.replaceChild(); //we should be doing all of this in statements, right?
-		return null;
+		me.getTreeParent().replaceChild(me, var.getNode());
+		return var;
 	}
 
 }
