@@ -1,2 +1,3 @@
 >SQF grammar works most of the time now, but suuuper slow when editing. I'm just going to make the expressions not check syntax
 >for SQF and Header, made the error analysis report the lexer token value rather than the lexer token name
+>SQF references and refactoring/renaming work
